--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href=".css/reset.css">
      <link rel="stylesheet" href="css/media.css">
-    <link rel="stylesheet" href="/slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" href="/slick-1.8.1/slick/slick-theme.css"> 
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick-theme.css"> 
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/burger.css">
+    <link rel="stylesheet" href="./burger.css">
      <title>Stream anime from the Cloud</title>
 </head>
 <body>
@@ -19,11 +19,11 @@
                 <div class="nav">
                     <div class="row_nav">
                         <div class="logo-form">
-                         <a href=""><img src="/img/logo.png" alt="logo"></a>   
+                         <a href=""><img src="./img/logo.png" alt="logo"></a>   
                             <p class="text_nav">Video from above.</p>
                         </div>
                         <div class="navigation">                    
-                              <a href=""><img src="/img/search.svg" alt="search"></a>  
+                              <a href=""><img src="./img/search.svg" alt="search"></a>  
                                
                                     <a href=""><li>Movies</li></a>
                                     <a href=""><li>Shows</li></a>
