--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
      <link rel="stylesheet" href="css/media.css">
-    <link rel="stylesheet" href="./slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" href="./slick-1.8.1/slick/slick-theme.css"> 
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick-theme.css"> 
      <link rel="stylesheet" href="css/style.css">
-     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/burger.css">
+     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/burger.css">
      <title>Stream anime from the Cloud</title>
 </head>
 <body>
