--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
     </section>
     
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="./slick-1.8.1/slick/slick.min.js"></script>
-<script src="/main.js"></script>
+<script src="slick-1.8.1/slick/slick.min.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
